# vision-for-fun

./: pyproject.toml
palm_detection/: __init__.py  palm_detect.py  rotate_image.py  snapchat_filter.py
tests/: test_palm_detection.py
