[tool.poetry]
name = "palm_detection"
version = "0.1.0"
description = ""
authors = ["Khrisna Kamarga <khrisnaadi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0"
mediapipe = "^0.8.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
